--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /node_modules
 /.pnp
 .pnp.js
+**/node_modules
 
 # testing
 /coverage
@@ -152,7 +153,7 @@ yarn-error.log*
 cmake-build-*/
 
 # Mongo Explorer plugin
-.idea/**/mongoSettings.xml
+.idea/**/mongoSettings.xml가
 
 # File-based project format
 *.iws
